# webresource

./: .gitignore  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  RELEASE.md  docs_requirements.txt  install.sh  pyproject.toml  setup.cfg  setup.py  test.sh  tox.ini
.github/workflows/: docs.yml  release.yml  test.yml  tests.yaml
docs/source/: api.rst  conf.py  index.rst  overview.rst
docs/source/_static/: custom.css
scripts/: clean.sh  docs.sh  install.sh
tests/: test_base.py  test_config.py  test_exceptions.py  test_groups.py  test_renderer.py  test_resolver.py  test_resources.py  test_utils.py  test_webresource.py
webresource/: __init__.py  _api.py  api.py  base.py  compat.py  compiler.py  config.py  exceptions.py  groups.py  markup.py  renderer.py  resolver.py  resource.py  resources.py  tests.py
webresource/tests/: __init__.py  test_compiler.py  test_markup.py  test_resource.py
