[project]
name = "webresource"
description = "A resource registry for web applications."
keywords = ["web", "resources", "dependencies", "javascript", "CSS"]
authors = [
  {name = "Conestack Contributors", email = "dev@conestack.org" }
]
requires-python = ">=3.10"
license = { text = "Simplified BSD" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx-conestack-theme",
]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://webresource.readthedocs.io/"
ChangeLog = "https://github.com/conestack/webresource/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/conestack/webresource/issues"
"Source Code" = "https://github.com/conestack/webresource"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "webresource/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGES.rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "LICENSE.rst"

[tool.hatch.build]
include = [
    "webresource/**",
]
exclude = [
    "webresource/_version.py",
]

[tool.isort]
profile = "black"
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "webresource/_version.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/tests.py" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["webresource"]
python_files = ["tests.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["webresource"]
omit = ["webresource/_version.py", "webresource/tests.py"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Keep for backward compatibility, but can be removed later
[tool.zest-releaser]
create-wheel = true
