[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webresource"
version = "2.0.0.dev0"
description = "A resource registry for web applications."
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["web", "resources", "dependencies", "javascript", "CSS"]
authors = [{name = "Conestack Constributors", email = "dev@conestack.org"}]
license = {text = "Simplified BSD"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx_conestack_theme",
]
test = [
    "coverage",
    "pytest",
]

[project.urls]
Documentation = "https://webresource.readthedocs.io/"
ChangeLog = "https://github.com/conestack/webresource/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/conestack/webresource/issues"
"Source Code" = "https://github.com/conestack/webresource"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]
include = ["docs/source/overview.rst"]

[tool.hatch.build.targets.wheel]
packages = ["webresource"]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.isort]
py_version = 310
profile = "plone"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false

[tool.zest-releaser]
create-wheel = true
