[metadata]
version = 1.0b9.dev0
name = webresource
description = A resource registry for web applications.
long_description = file: README.rst, docs/source/overview.rst, CHANGES.rst
keywords = web resources dependencies javascript CSS
author = Conestack Constributors
author_email = dev@conestack.org
license = Simplified BSD
license_files = file: LICENSE.rst
project_urls =
    Documentation = https://webresource.readthedocs.io/
    ChaageLog = https://github.com/conestack/webresource/blob/master/CHANGES.rst
    Issue Tracker = https://github.com/conestack/webresource/issues
    Source Code = https://github.com/conestack/webresource
classifiers =
     Environment :: Web Environment
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = webresource
setup_requires = setuptools
include_package_data = True
zip_safe = False

[options.extras_require]
docs =
    Sphinx
    sphinx_conestack_theme

test =
    coverage
